# emergent-alignment-icl

./: .gitignore  README.md
content/: blog-draft.md  micro-blog-persona-vs-priority.md  presentation-slides.md
experiments/: .env.example
experiments/configs/: adversarial-icl.yaml  cross-modality.yaml  persona-adoption-priority.yaml  persona-adoption.yaml  priority-prompting-code.yaml  priority-prompting.yaml  safety-boundaries-strict.yaml  safety-boundaries.yaml  unsafe-code-priority.yaml
experiments/results/: .gitkeep  adversarial-icl_gpt-4o-mini_20260203_065101.json  adversarial-icl_xai-grok-3-mini_20260203_065201.json  cross-modality_gpt-4o-mini_20260203_064806.json  cross-modality_xai-grok-3-mini_20260203_064758.json  persona-adoption_claude-3-haiku-20240307_20260203_064604.json  persona-adoption_gpt-4o-mini_20260203_064543.json  persona-adoption_xai-grok-3-mini_20260203_064500.json  priority-prompting-code_anthropic-claude-3-haiku-20240307_20260204_212121.json  priority-prompting-code_gpt-4o-mini_20260204_211927.json  priority-prompting-code_xai-grok-3-mini_20260204_212534.json  priority-prompting_anthropic-claude-3-haiku-20240307_20260204_124249.json  priority-prompting_claude-haiku_manual_detailed.json  priority-prompting_claude-haiku_manual_summary.json  priority-prompting_eval.json  priority-prompting_eval_detailed.json  priority-prompting_eval_v2.json  priority-prompting_eval_v2_detailed.json  (+14 more)
experiments/runner/: pyproject.toml
experiments/runner/src/icl_experiments/: __init__.py  cli.py  config.py  evaluate.py  manual_eval.py  runner.py  ui.py
